created projects EDA #2

--- a/Movie Titles.ipynb
+++ b/Movie Titles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Movie_Titles = pd.read_csv(\"data/zippeddata/imdb.title.basics.csv.gz\")\n",
+    "Movie_Titles.sort_values(by=['runtime_minutes'], inplace=True, ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +48,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>tconst</th>\n",
        "      <th>primary_title</th>\n",
        "      <th>original_title</th>\n",
        "      <th>start_year</th>\n",
@@ -48,80 +57,194 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>tt0063540</td>\n",
-       "      <td>Sunghursh</td>\n",
-       "      <td>Sunghursh</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>175.0</td>\n",
-       "      <td>Action,Crime,Drama</td>\n",
+       "      <th>132389</th>\n",
+       "      <td>Logistics</td>\n",
+       "      <td>Logistics</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>51420.0</td>\n",
+       "      <td>Documentary</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>tt0066787</td>\n",
-       "      <td>One Day Before the Rainy Season</td>\n",
-       "      <td>Ashad Ka Ek Din</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>114.0</td>\n",
-       "      <td>Biography,Drama</td>\n",
+       "      <th>44840</th>\n",
+       "      <td>Modern Times Forever</td>\n",
+       "      <td>Modern Times Forever</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>14400.0</td>\n",
+       "      <td>Documentary</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>tt0069049</td>\n",
-       "      <td>The Other Side of the Wind</td>\n",
-       "      <td>The Other Side of the Wind</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>122.0</td>\n",
-       "      <td>Drama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>tt0069204</td>\n",
-       "      <td>Sabse Bada Sukh</td>\n",
-       "      <td>Sabse Bada Sukh</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Comedy,Drama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>tt0100275</td>\n",
-       "      <td>The Wandering Soap Opera</td>\n",
-       "      <td>La Telenovela Errante</td>\n",
+       "      <th>123467</th>\n",
+       "      <td>Nari</td>\n",
+       "      <td>Nari</td>\n",
        "      <td>2017</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>Comedy,Drama,Fantasy</td>\n",
+       "      <td>6017.0</td>\n",
+       "      <td>Documentary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87264</th>\n",
+       "      <td>Hunger!</td>\n",
+       "      <td>Hunger!</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>6000.0</td>\n",
+       "      <td>Documentary,Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88717</th>\n",
+       "      <td>London EC1</td>\n",
+       "      <td>London EC1</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>5460.0</td>\n",
+       "      <td>Comedy,Drama,Mystery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2570</th>\n",
+       "      <td>Lamentation For Little Girls Who Are In Love W...</td>\n",
+       "      <td>Lamentation For Little Girls Who Are In Love W...</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Animation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117258</th>\n",
+       "      <td>Champion</td>\n",
+       "      <td>Champion</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Documentary,Sport</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60809</th>\n",
+       "      <td>November</td>\n",
+       "      <td>November</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Documentary,History</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72190</th>\n",
+       "      <td>Powered By Green Smoothies</td>\n",
+       "      <td>Powered By Green Smoothies</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Adventure,Documentary,Sport</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93214</th>\n",
+       "      <td>Great Valley Nature Center Documentary</td>\n",
+       "      <td>Great Valley Nature Center Documentary</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Documentary</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>112232 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      tconst                    primary_title              original_title  \\\n",
-       "0  tt0063540                        Sunghursh                   Sunghursh   \n",
-       "1  tt0066787  One Day Before the Rainy Season             Ashad Ka Ek Din   \n",
-       "2  tt0069049       The Other Side of the Wind  The Other Side of the Wind   \n",
-       "3  tt0069204                  Sabse Bada Sukh             Sabse Bada Sukh   \n",
-       "4  tt0100275         The Wandering Soap Opera       La Telenovela Errante   \n",
+       "                                            primary_title  \\\n",
+       "132389                                          Logistics   \n",
+       "44840                                Modern Times Forever   \n",
+       "123467                                               Nari   \n",
+       "87264                                             Hunger!   \n",
+       "88717                                          London EC1   \n",
+       "...                                                   ...   \n",
+       "2570    Lamentation For Little Girls Who Are In Love W...   \n",
+       "117258                                           Champion   \n",
+       "60809                                            November   \n",
+       "72190                          Powered By Green Smoothies   \n",
+       "93214              Great Valley Nature Center Documentary   \n",
        "\n",
-       "   start_year  runtime_minutes                genres  \n",
-       "0        2013            175.0    Action,Crime,Drama  \n",
-       "1        2019            114.0       Biography,Drama  \n",
-       "2        2018            122.0                 Drama  \n",
-       "3        2018              NaN          Comedy,Drama  \n",
-       "4        2017             80.0  Comedy,Drama,Fantasy  "
+       "                                           original_title  start_year  \\\n",
+       "132389                                          Logistics        2012   \n",
+       "44840                                Modern Times Forever        2011   \n",
+       "123467                                               Nari        2017   \n",
+       "87264                                             Hunger!        2015   \n",
+       "88717                                          London EC1        2015   \n",
+       "...                                                   ...         ...   \n",
+       "2570    Lamentation For Little Girls Who Are In Love W...        2019   \n",
+       "117258                                           Champion        2017   \n",
+       "60809                                            November        2014   \n",
+       "72190                          Powered By Green Smoothies        2014   \n",
+       "93214              Great Valley Nature Center Documentary        2015   \n",
+       "\n",
+       "        runtime_minutes                       genres  \n",
+       "132389          51420.0                  Documentary  \n",
+       "44840           14400.0                  Documentary  \n",
+       "123467           6017.0                  Documentary  \n",
+       "87264            6000.0            Documentary,Drama  \n",
+       "88717            5460.0         Comedy,Drama,Mystery  \n",
+       "...                 ...                          ...  \n",
+       "2570                1.0                    Animation  \n",
+       "117258              1.0            Documentary,Sport  \n",
+       "60809               1.0          Documentary,History  \n",
+       "72190               1.0  Adventure,Documentary,Sport  \n",
+       "93214               1.0                  Documentary  \n",
+       "\n",
+       "[112232 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/zippeddata/imdb.title.basics.csv.gz\")\n",
-    "df.head()\n",
-    "df.sort_values(by=['domestic_gross'], inplace=True, ascending=False)\n",
-    "df"
+    "Movie_Titles.dropna(inplace=True)\n",
+    "Movie_Titles.drop(['primary_title'], axis=1)\n",
+    "Movie_Titles.drop(['tconst'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           tconst                   primary_title  \\\n",
+      "94416   tt5503472               Gone Are the Days   \n",
+      "39860   tt2418150                   Cowboy Spirit   \n",
+      "64764   tt3708370                  Oro del Diablo   \n",
+      "31735   tt2197881  Cole Younger & The Black Train   \n",
+      "80812   tt4644836         Calamity Jane's Revenge   \n",
+      "...           ...                             ...   \n",
+      "34650   tt2281293                      I'm Flash!   \n",
+      "62477   tt3594826    Monk Comes Down the Mountain   \n",
+      "131588  tt8192456                        Wayunagu   \n",
+      "115388  tt6844374                        Blinkers   \n",
+      "7799    tt1455619                     Fist 2 Fist   \n",
+      "\n",
+      "                        original_title  start_year  runtime_minutes   genres  \n",
+      "94416                Gone Are the Days        2018             99.0  Western  \n",
+      "39860                    Cowboy Spirit        2012             94.0  Western  \n",
+      "64764                   Oro del Diablo        2013             91.0  Western  \n",
+      "31735   Cole Younger & The Black Train        2012             90.0  Western  \n",
+      "80812          Calamity Jane's Revenge        2015             85.0  Western  \n",
+      "...                                ...         ...              ...      ...  \n",
+      "34650                       I'm Flash!        2012             91.0   Action  \n",
+      "62477                 Dao shi xia shan        2015            123.0   Action  \n",
+      "131588                        Wayunagu        2017             87.0   Action  \n",
+      "115388                        Blinkers        2019            123.0   Action  \n",
+      "7799                       Hand 2 Hand        2011             92.0   Action  \n",
+      "\n",
+      "[112232 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Sorted_Movies = Movie_Titles.sort_values(by='genres', ascending=False)\n",
+    "print(Sorted_Movies)"
    ]
   },
   {
