--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,8 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "2a15aaf0-a6ac-4a1e-b7df-806b4c1a7f96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c752f88d-07e7-47d0-b342-b5f82cbc1a77",
+   "id": "d11972dd-6a17-450e-ac17-a983481ac58c",
    "metadata": {},
    "outputs": [],
    "source": []
